...
    ),
    NavTab(
      labelKey: LocaleKeys.navMerchants,
      icon: App3dIconType.merchants,

      permission: P.merchantsRead,
      identifier: 'nav_tab_merchants',
      pageBuilder: _buildMerchants,
    ),
    NavTab(
      labelKey: LocaleKeys.navFinance,
      icon: App3dIconType.finance,

...
